--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             <ul class="navbar-nav ml-auto">
 
               <li class="nav-item">
-                <a href="#" class="nav-link">Premium</a>
+                <a href="#" class="nav-link">Acessar</a>
               </li>
 
               <li class="nav-item">
-                <a href="#" class="nav-link">Ajuda</a>
+                <a href="#" class="nav-link">Acessar</a>
               </li>
 
               <li class="nav-item">
-                <a href="#" class="nav-link">Baixar</a>
+                <a href="#" class="nav-link">Acessar</a>
               </li>
 
               <li class="nav-item  divisor"></li>
@@ -59,7 +59,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="#" class="nav-link">Entrar</a>
+                <a href="#" class="nav-link">Acessar</a>
               </li>
 
             </ul>
@@ -84,11 +84,11 @@
                   <h1 class="text-white">Seja seu melhor</h1>
 
                   <a href="" class="btn btn-outline-warning ml-4">
-                  Inscreva-se hoje
+                  Inscreva-se 
                     </a>
 
                   <a href="" class="btn btn-outline-warning ml-4">
-                  Inscreva-se hoje
+                  Inscreva-se
                     </a>
 
                 </div>
@@ -98,7 +98,7 @@
                   <h1 class="text-white">Dê seu melhor</h1>
 
                   <a href="" class="btn btn-outline-warning ml-4">
-                   Inscreva-se hoje
+                   Inscreva-se
                   </a>
 
                 </div>
