--- a/index.html
+++ b/index.html
@@ -223,17 +223,22 @@
     <footer>
       <div class="container caixa">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-3">
             <h4>Endereço</h4>
             <p>Rua Qualquer, 123, Cidade - Rj</p>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-3">
             <h4>E-mail</h4>
               <p>qualquer@luizhenrique.com</p>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-3">
+            <h4>Telefone</h4>
+              <p>(21) 9637-8849</p>
+          </div>
+
+          <div class="col-md-3">
             <ul>
               <li><a href=""><img width="30px" src="img/facebook.png" alt=""></a></li>
 
